Started some serious refactoring from regular JS to jQuery.

--- a/ASD/week01/honeyDoApp/index.html
+++ b/ASD/week01/honeyDoApp/index.html
@@ -41,7 +41,7 @@
 		    <li><a href="#construction" data-ajax="false"><img src="images/Errand.gif" width="80" height="80"/><h3>Errand Runs</h3></a></li>
 		    <li><a href="#construction" data-ajax="false"><img src="images/Make Phone Call.gif" width="80" height="80"/><h3>Make Phone Call</h3></h3></a></li>
 		    <li><a href="#construction" data-ajax="false"><img src="images/Pay Bill.gif" width="80" height="80"/><h3>Pay Bill</h3></a></li>
-		    <li><a href="#construction" data-ajax="false"><img src="images/Urgent.gif" width="80" height="80"/><h3>Urgent Jobs</h3</a></li>
+		    <li><a href="#construction" data-ajax="false"><img src="images/Urgent.gif" width="80" height="80"/><h3>Urgent Jobs</h3></a></li>
 		    <li><a href="#construction" data-ajax="false"><img src="images/Recurring.gif" width="80" height="80"/><h3>Recurring Jobs</h3></a></li>
 		</ul>
 		
@@ -246,7 +246,7 @@
 	    <h1>The List</h1>
 	</div>
 	
-	<div data-role="content" id="data">
+	<div data-role="content" id="showList">
 	    <img id="logo" src="images/HoneyDoHead.gif" width="auto" height="auto"/>
 	    
 	</div>
