--- a/ASD/week03/honeyDoApp/app/_attachments/index.html
+++ b/ASD/week03/honeyDoApp/app/_attachments/index.html
@@ -12,9 +12,9 @@
 	<meta http-equiv="cleartype" content="on">
 	
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="style.css"/>
 	
-	<script src="js/libs/modernizr.custom.min.js"></script>
+	<script src="modernizr.custom.min.js"></script>
 
 </head>
 <body>
@@ -27,20 +27,20 @@
 		</div>
 		
 		<div data-role="content">
-		    <img src="images/HoneyDoHead.gif" width="auto" height="auto"/>
+		    <img src="HoneyDoHead.gif" width="auto" height="auto"/>
 		    <div data-role="fieldcontain" class="featContain">   
-	                <img id="feature" class="feature" src="images/handymangold.gif" width=250 height=150/>
+	                <img id="feature" class="feature" src="handymangold.gif" width=250 height=150/>
 	                <a href="#additem" data-role="button" data-icon="arrow" data-iconpos="right" data-theme="b">Add a Chore</a>
 	            </div>
 		    
 		    <div data-role="fieldcontain">
 			<ul data-role="listview" data-filter="true" data-theme="a">
 			    <li data-role="list-divider"><h3>Browse Chores</h3></li>
-			    <li><a href="#inside" id="insideButton"><img src="images/Inside.gif" width="80" height="80"/><h3>Inside Jobs</h3></a></li>
-			    <li><a href="#outside" id="outsideButton"><img src="images/Outside.gif" width="80" height="80"/><h3>Outside Jobs</h3></a></li>
-			    <li><a href="#errands" id="errandsButton"><img src="images/Errand.gif" width="80" height="80"/><h3>Errand Runs</h3></a></li>
-			    <li><a href="#phoneCalls" id="phoneButton"><img src="images/Make Phone Call.gif" width="80" height="80"/><h3>Make Phone Call</h3></a></li>
-			    <li><a href="#payBill" id="payButton"><img src="images/Pay Bill.gif" width="80" height="80"/><h3>Pay Bill</h3></a></li>
+			    <li><a href="#inside" id="insideButton"><img src="Inside.gif" width="80" height="80"/><h3>Inside Jobs</h3></a></li>
+			    <li><a href="#outside" id="outsideButton"><img src="Outside.gif" width="80" height="80"/><h3>Outside Jobs</h3></a></li>
+			    <li><a href="#errands" id="errandsButton"><img src="Errand.gif" width="80" height="80"/><h3>Errand Runs</h3></a></li>
+			    <li><a href="#phoneCalls" id="phoneButton"><img src="Make Phone Call.gif" width="80" height="80"/><h3>Make Phone Call</h3></a></li>
+			    <li><a href="#payBill" id="payButton"><img src="Pay Bill.gif" width="80" height="80"/><h3>Pay Bill</h3></a></li>
 			    <!-- <li><a href="#urgent"><img src="images/Urgent.gif" width="80" height="80"/><h3>Urgent Jobs</h3></a></li>
 			    <li><a href="#recurring"><img src="images/Recurring.gif" width="80" height="80"/><h3>Recurring Jobs</h3></a></li> -->
 			</ul>
@@ -68,7 +68,7 @@
 		</div>
 		
 		<div data-role="content">
-		    <img src="images/HoneyDoHead.gif" width="auto" height="auto"/>
+		    <img src="HoneyDoHead.gif" width="auto" height="auto"/>
 		    <form action="#" id="choreForm">   
 			    
 			    <p>**Required Fields</p>
@@ -155,7 +155,7 @@
 		</div>
 		
 		<div data-role="content">
-		    <img src="images/HoneyDoHead.gif" width="auto" height="auto"/>
+		    <img src="HoneyDoHead.gif" width="auto" height="auto"/>
 		    <h3>Adam Vinsant</h3>
 		    <p>This App is for my ASD 1210 class. The GOLD app from MIU is the main app that I will be expanding on using jQuery. The BRONZE app contains the stuff that I don't really want to incorporate into the app.</p>
 		    <p>Follow the links below to see my work.</p>
@@ -375,8 +375,8 @@
    
     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
-    <script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="jquery.validate.min.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
