week 2 final submission

--- a/AVF/AVFDemoSite/index.html
+++ b/AVF/AVFDemoSite/index.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
+<!--Adam Vinsant
+AVF 1212
+Week 2
+-->
+<!doctype html>
 <html>
-    <head>
-        <title>AVF 12/12 Demo</title>
+<head>
+		<meta charset="utf-8">
+		<title>AVF 12/12 Demo</title>
 		<meta name="HandheldFriendly" content="True">
-        <meta name="MobileOptimized" content="320"/>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />-->
-        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.2.0.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <!--<link rel="stylesheet" type="text/css" href="css/index.css" />-->
-        
-    </head>
-    <body>
+		<meta name="MobileOptimized" content="320"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	
+		<meta http-equiv="cleartype" content="on" />
+		
+        <link rel="stylesheet" href="css/style.css"/>
+</head>
+<body>
 		<header>
         	<h1>Adam Vinsant-
-                AVF Demo 1212</h1>
+            AVF Demo 1212</h1>
         </header>
         <br/>
         <div class="content">
@@ -46,14 +48,7 @@
             <a href="#" class="button">Week 3</a>
             <a href="#" class="button">Week 4</a>
         </div>
-        
-        <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
-        <script type="text/javascript" src="js/jquery.mobile-1.2.0.min.js"></script>
-        <script type="text/javascript" src="cordova-2.2.0.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-        <script>
-            app.initialize();
-        </script>
-    </body>
+        <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+</body>
 </html>
