week 2 final commit

--- a/AVF/AVFDemoSite/index.html
+++ b/AVF/AVFDemoSite/index.html
@@ -29,7 +29,7 @@ Week 2
         <div class="content">
         	<h2>JSON-P Data API's</h2>
             <a href="twitterapi.html" class="button">Twitter</a>
-            <a href="#" class="button">Last.FM</a>
+            <a href="google.html" class="button">Google Search</a>
         </div>
         <br/>
         <div class="content">
