Added home button

--- a/AVF/AVFDemoSite/google.html
+++ b/AVF/AVFDemoSite/google.html
@@ -16,6 +16,7 @@
 	<header>
     	<h1>Google Custom Search</h1>
     </header>
+    <a href="index.html">Home</a>
 	<div class="content">
     	<p>This is a custom search using the Google Custom Search API engine.</p>
     </div>
