--- a/AVF/AVFDemoSite/twitterapi.html
+++ b/AVF/AVFDemoSite/twitterapi.html
@@ -20,6 +20,7 @@ Week 2
 	<header>
         	<h1>Twitter API Demo</h1>
     </header>
+    <a href="index.html">Home</a>
     <div>
     	<h2>Search Twitter</h2>
         <center><input type="text" id="searchString"/></center>
