final week 4 commit

--- a/AVF/appsIOS/www/index.html
+++ b/AVF/appsIOS/www/index.html
@@ -71,6 +71,9 @@
                 <h1>Week 3 Video</h1>
                 <iframe width="320" height="200" src="http://www.youtube.com/embed/TklW2mshpno" frameborder="0" allowfullscreen></iframe>
                 <br/>
+                <h1>Week 4 Video</h1>
+                <iframe width="320" height="200" src="http://www.youtube.com/embed/lKUXcjtcY8A" frameborder="0" allowfullscreen></iframe>
+                <br/>
             </div>
         </section>
         
